<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="
          http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Project Object Model -->
    <!-- All POMs extend the Super POM unless explicitly set -->
    <!--<parent>*</parent>-->

    <groupId>ru.otus</groupId>
    <artifactId>otus-java</artifactId>
    <version>2019-09-SNAPSHOT</version>

    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Artem Podstavkin</name>
        </developer>
    </developers>

    <modules>
        <module>hw01-maven</module>
        <module>hw02-array</module>
        <module>hw03-outofmemory</module>
        <module>hw04-logger</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <com.google.guava.version>27.1-jre</com.google.guava.version>
        <my.variable>42</my.variable>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.google.guava.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
